--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <div class="container">
     <div class="row mt-3 justify-content-center">
         <div class="col-md-8">
-            <h1 class="title">Movie Recomendation</h1>
+            <h1 class="title">Movies Trending</h1>
         </div>
     </div>
     <hr>
