--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
         </div>
         <ul id="menu-list" class="hidden">
           <li>
-            <a href="index.html">Home</a>
+            <a href="index.html"><i class="fa-solid fa-house"></i> Home</a>
           </li>
           <li>
-            <a href="search.html">Search</a>
+            <a href="search.html"><i class="fa-solid fa-magnifying-glass"></i> Search</a>
           </li>
           <li>
-            <a href="#footer-section">TOS & PP</a>
+            <a href="#footer-section"><i class="fa-solid fa-newspaper"></i> TOS & PP</a>
           </li>
           <li>
-            <a href="#footer-section">Contact</a>
+            <a href="#footer-section"><i class="fa-solid fa-envelope"></i> Contact</a>
           </li>
         </ul>
       </nav>
