--- a/index.html
+++ b/index.html
@@ -4,12 +4,26 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Movie Finder</title>
+    <meta name="description" content="A website for search details movies">
     <link rel="icon" type="image/png" href="src/assets/images/AWWW.png  ">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="src/style/global.css">
-
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
+
+    <!-- Open Graph Meta Tags (for Facebook, LinkedIn, etc.) -->
+    <meta property="og:title" content="Movie Finder">
+    <meta property="og:description" content="A website for search details movies.">
+    <meta property="og:image" content="https://i.imgur.com/wiheCpb.png">
+    <meta property="og:url" content="https://movies-details-mu.vercel.app">
+    <meta property="og:type" content="Website">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Movie Finder">
+    <meta name="twitter:description" content="A website for search details movies.">
+    <meta name="twitter:image" content="https://i.imgur.com/wiheCpb.png">
+
   </head>
   <body>
 
