--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
     </div>
     <hr>
-    <div class="row" id="movie-recomandation">
+    <div class="movies-card" id="movie-recomandation">
         <div class="col">
 
         </div>
