--- a/search.html
+++ b/search.html
@@ -66,7 +66,7 @@
 
     <hr>
     
-    <div class="row" id="movie-list">
+    <div class="movies-card" id="movie-list">
         <div class="col">
 
         </div>
