--- a/search.html
+++ b/search.html
@@ -79,7 +79,7 @@
 <!-- Modal Details-->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg">
-    <div class="modal-content">
+    <div class="modal-content modal-dark">
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="exampleModalLabel">Movie Details</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
