--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="src/assets/images/AWWW.png  ">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="src/style/global.css">
+    <link rel="stylesheet" href="src/style/global.css" sizes="16x16">
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
 
     <!-- Open Graph Meta Tags (for Facebook, LinkedIn, etc.) -->
@@ -39,7 +39,7 @@
         </div>
         <ul id="menu-list" class="hidden">
           <li>
-            <a href="index.html"><i class="fa-solid fa-house"></i> Home</a>
+            <a href="index.html"class="active"><i class="fa-solid fa-house"></i> Home</a>
           </li>
           <li>
             <a href="search.html"><i class="fa-solid fa-magnifying-glass"></i> Search</a>
