--- a/search.html
+++ b/search.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Movie Finder</title> 
     <meta name="description" content="A website for search details movies">
-    <link rel="icon" href="src/assets/images/AWWW.png" type="png">
+    <link rel="icon" href="src/assets/images/AWWW.png" sizes="16x16" type="png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="src/style/global.css">
@@ -41,7 +41,7 @@
           <a href="index.html"><i class="fa-solid fa-house"></i> Home</a>
         </li>
         <li>
-          <a href="search.html"><i class="fa-solid fa-magnifying-glass"></i> Search</a>
+          <a href="search.html" class="active"><i class="fa-solid fa-magnifying-glass" id="active" ></i> Search</a>
         </li>
         <li>
           <a href="#footer-section"><i class="fa-solid fa-newspaper"></i> TOS & PP</a>
