--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <section id="footer-section">
     <footer>
       <div class="footer-content">
-          <p>&copy; 2024 Rizz Development Team. All rights reserved.</p>
+          <p>&copy; 2024 Rizz Development Team | Powered by <a href="https://www.omdbapi.com/"target="_blank">OMDB</a> & <a href="https://www.themoviedb.org/">TMDB</a> </p>
           <ul class="footer-links">
               <li><a href="https://delynessence.github.io/TermsOfService-PrivacyPolicy/"target="_blank">Privacy Policy</a></li>
               <li><a href="https://delynessence.github.io/TermsOfService-PrivacyPolicy/"target="_blank">Terms of Service</a></li>
